# MTProxyInspector

./: .gitignore  CMakeLists.txt  README.md  activity_name.txt  package_name.txt  set_tag.sh  tbuild.sh
app/: CMakeLists.txt  main.cpp
app/android/: AndroidManifest.xml  build.gradle
app/android/res/values/: strings.xml
app/android/res/values-en/: strings.xml
app/android/res/values-ru/: strings.xml
app/qml/: MButton.qml  MCard.qml  MDelegate.qml  MItemDelegate.qml  MListView.qml  Main.qml  MainTest.qml  NavigationPane.qml
docs/: AppDesc.md  AppDiagram.md  links.md  paste_1.md  paste_2.md  proxies-tested.txt  solarizide.md
plugins/: CMakeLists.txt
plugins/androidutils/: CMakeLists.txt  androidutils.cpp  androidutils.h
plugins/core/: CMakeLists.txt  appcontroller.cpp  appcontroller.h  core.cpp  core.h  itester.cpp  itester.h  networkmanager.cpp  networkmanager.h  sendertypes.h  storagemanager.cpp  storagemanager.h
plugins/imageprovider/: imagedatamanager.cpp  imagedatamanager.h
plugins/ui/: CMakeLists.txt  MemoCard.qml  SimpleFlip.qml
